🐛 [#49] Maybe fix OSX crap scrollbar

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -195,7 +195,7 @@ a {
 
 .messages {
   float: left;
-  width: calc(100% - 5px);
+  width: calc(100% - 10px);
   padding: 10px 10px 10px 10px;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -251,4 +251,14 @@ a {
 .fade-enter, .fade-leave-to {
   max-height: 0;
   padding: 0 10px;
+}
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 0px;
+  background-color: rgba(0, 0, 0, .5);
 }
